--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <h1>JS Higher Order Functions and Arrays</h1>
 
 <body>
-    <script src="main.js"></script>
+    <script type="module" src="data.js"></script>
+    <script type="module" src="forLoop.js"></script>
 </body>
 
 </html>
