--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script type="module" src="data.js"></script>
-    <script type="module" src="forLoop.js"></script>
+    <script type="module" src="filter.js"></script>
 </body>
 
 </html>
